--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "Curso de Nodejs",
   "main": "index.js",
   "scripts": {
+    "deve": "concurrently \"npm run dev \" \"npm run watch",
     "dev": "nodemon index.js",
     "watch": "webpack",
-    "start": "concurrently \"npm run dev \" \"npm run watch",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -20,10 +21,14 @@
     "concurrently": "^5.3.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "express-validator": "^6.9.2",
+    "html-to-text": "^6.0.0",
+    "juice": "^7.0.0",
     "mysql2": "^2.2.5",
+    "nodemailer": "^6.4.17",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pug": "^3.0.0",
